Always show scrollbar to prevent UI jitter

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,3 @@
 body {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-}
-::-webkit-scrollbar {
-  scrollbar-width: none; /* Chrome, Safari */
+  overflow-y: scroll;
 }
